--- a/src/Views/News/Index.cshtml
+++ b/src/Views/News/Index.cshtml
@@ -144,6 +144,7 @@
                         {{comment.votes}}
                     </div>
 
+                    <!-- TODO: these should be submits inside a form -->
                     <!-- Upvote -->
                     <div class="metadata-icon-text button-vote upvote"
                         role="button"
