--- a/src/Styles/_comments.scss
+++ b/src/Styles/_comments.scss
@@ -264,6 +264,7 @@
   textarea {
     width: calc(100% - 6.75em);
     min-height: 27px;
+    padding-top: 4px;
     margin: 8px 0 10px 0;
     resize: vertical;
     overflow: hidden;
