--- a/src/Styles/_comments.scss
+++ b/src/Styles/_comments.scss
@@ -231,7 +231,7 @@
   &-prompt {
     color: $secondary-text-color;
     float: left;
-    margin: 0 .25em;
+    margin: 0 .5em 0 .25em;
   }
 
   form {
@@ -239,6 +239,10 @@
     margin-bottom: 2px;
     float: left;
   }
+}
+
+.os-win .comment-login form {
+  margin-top: 0;
 }
 
 .comment-entry-toggle:not(:checked) + label + .comment-login {
@@ -283,6 +287,7 @@
 
 .os-win .comment-entry {
   textarea {
+    padding-top: 2px;
     margin-bottom: 22px;
   }
 }
