Fix tooltip offset on login forms

--- a/src/Views/News/Index.cshtml
+++ b/src/Views/News/Index.cshtml
@@ -187,8 +187,8 @@
                     class="button-inline button-social button-social-@loginProvider.DisplayName.ToLower()"
                     name="authenticationScheme"
                     data-tooltip="login with @loginProvider.DisplayName"
-                    data-tooltip-offset-x="-4"
-                    data-tooltip-offset-y="6"
+                    data-tooltip-offset-left="-4"
+                    data-tooltip-offset-top="6"
                     data-ng-show="!news.user"
                     data-ng-click="news.login()">
                     <icon class="icon-button"
