--- a/src/Views/News/Index.cshtml
+++ b/src/Views/News/Index.cshtml
@@ -120,7 +120,7 @@
     </section>
     
     <!-- Story comments -->
-    <section class="comments">
+    <section class="comments clear-fix">
         <!-- TODO: fix line-height so we can have multiline comments -->
         <section class="metadata comments-list"
             data-ng-show="news.comments[@storyId].length">
