--- a/src/Styles/_attributes.scss
+++ b/src/Styles/_attributes.scss
@@ -10,6 +10,12 @@
   margin-top: 8px;
 }
 
+.clear-fix:after {
+  content: '';
+  display: table;
+  clear: both;
+}
+
 .full-width {
   width: 100%;
 }
