--- a/src/Views/News/Index.cshtml
+++ b/src/Views/News/Index.cshtml
@@ -209,13 +209,13 @@
         <!-- Comment entry details -->
         <section class="comment-entry">
             <!-- Comments error -->
-            <!--<error class="comment-error"
+            <error
                 data-ng-class="{ 'comment-error--active': news.commentError[@storyId] }"
                 data-operation="news.commentOperation[@storyId]"
                 data-error="news.commentError[@storyId]"
                 data-code="news.commentError[@storyId].status"
                 data-message="news.commentError[@storyId].statusText">
-            </error>-->
+            </error>
 
             <form>
                 <!-- Comment input -->
