--- a/src/Views/News/Index.cshtml
+++ b/src/Views/News/Index.cshtml
@@ -210,7 +210,7 @@
         <section class="comment-entry">
             <!-- Comments error -->
             <error
-                data-ng-class="{ 'comment-error--active': news.commentError[@storyId] }"
+                data-ng-class="{ 'comment-entry__error--active': news.commentError[@storyId] }"
                 data-operation="news.commentOperation[@storyId]"
                 data-error="news.commentError[@storyId]"
                 data-code="news.commentError[@storyId].status"
