--- a/src/Styles/_comments.scss
+++ b/src/Styles/_comments.scss
@@ -75,7 +75,8 @@
 
 .comment__vote {
   position: absolute;
-  margin-top: 1pt;
+  line-height: 1.5em;
+  margin-top: .35em;
   margin-left: -$small-font-size * 2;
   width: $small-font-size * 3;
   height: $small-font-size * 2;
@@ -111,7 +112,7 @@
 }
 
 .vote--default .vote__content {
-  opacity: 0;
+  //opacity: 0;
 }
 
 .vote--readonly .button-vote {
@@ -130,18 +131,18 @@
 
   .vote--readonly {
     .button-vote {
-      opacity: 0;
+      //opacity: 0;
     }
 
     .vote__content {
-      opacity: .5;
-      padding-right: $small-font-size * 1.5;
+      //opacity: .5;
+      //padding-right: $small-font-size * 1.5;
     }
   }
 
   .vote--default {
     .vote__content {
-      opacity: 0;
+      //opacity: 0;
     }
   }
 }
