Add icons and transition

--- a/src/Views/News/Index.cshtml
+++ b/src/Views/News/Index.cshtml
@@ -174,6 +174,16 @@
             data-ng-click="news.toggleComment(@storyId)">
             
         <label for="toggle-@storyId" class="button-inline no-select">
+            <icon class="icon-button comment-entry__icon comment-entry__icon--expand"
+                data-src="images/banner.svg#expand"
+                data-width="16"
+                data-height="16">
+            </icon>
+            <icon class="icon-button comment-entry__icon comment-entry__icon--collapse"
+                data-src="images/banner.svg#collapse"
+                data-width="16"
+                data-height="16">
+            </icon>
             comment
         </label>
 
