Collapse does not need its own class

--- a/src/Views/News/Index.cshtml
+++ b/src/Views/News/Index.cshtml
@@ -179,7 +179,7 @@
                 data-width="16"
                 data-height="16">
             </icon>
-            <icon class="icon-button comment-entry__icon comment-entry__icon--collapse"
+            <icon class="icon-button comment-entry__icon"
                 data-src="images/banner.svg#collapse"
                 data-width="16"
                 data-height="16">
