Update spacing for Mac and Firefox

--- a/src/Styles/_comments.scss
+++ b/src/Styles/_comments.scss
@@ -326,6 +326,10 @@ $comment-padding: .35em;
     width: 6.25em;
     top: 8px;
     right: 0;
+
+    .icon-button {
+      right: 1px;
+    }
   }
 }
 
