--- a/src/Styles/_date.selector.scss
+++ b/src/Styles/_date.selector.scss
@@ -128,6 +128,7 @@
         color: lighten($foreground-color, 20%);
         transition: color $animation-fast $fade-function;
         cursor: pointer;
+        overflow: hidden;
 
         // Replaced browser focus outline with date-selector-page-focus-outline.
         border: none;
@@ -138,8 +139,8 @@
         &:hover {
             color: $foreground-color;
 
-            .date-selector-page-hover {
-                opacity: 1;
+            .date-selector-page-overlay {
+                top: 0;
             }
 
             &.selected {
@@ -165,7 +166,7 @@
             color: rgba($background-color, .7);
 
             .date-selector-page {
-                &-hover,
+                &-overlay,
                 &-border {
                     display: none;
                 }
@@ -218,7 +219,7 @@
             }
 
             &:hover {
-                .date-selector-page-hover {
+                .date-selector-page-overlay {
                     display: none;
                 }
 
@@ -246,7 +247,7 @@
         &-border-pushed,
         &-outline,
         &-background,
-        &-hover,
+        &-overlay,
         &-pushed {
             // Fix :active not shown on IE due to mouse events being eaten 
             pointer-events: none;
@@ -263,7 +264,6 @@
         }
 
         &-background,
-        &-hover,
         &-pushed
         {
             position: absolute;
@@ -271,6 +271,13 @@
             top: 0;
             right: 0;
             bottom: 0;
+        }
+
+        &-overlay {
+            position: absolute;
+            top: -16px;
+            left: 0;
+            height: 42px;
         }
 
         &-pushed {
@@ -309,10 +316,10 @@
             z-index: 3;
         }
 
-        &-hover {
+        &-overlay {
             z-index: -2;
-            opacity: 0;
-            transition: opacity 0.4s $fade-function;
+            transition: top $animation-fast $fade-function,
+                        height $animation-fast $fade-function;
         }
 
         // Bottom shadow 
@@ -337,12 +344,13 @@
         outline: none;
         cursor: pointer;
 
-        // Hover 
+        // Hover
         &:hover {
             color: $foreground-color;
 
-            .date-selector-page-hover {
-                opacity: 1;
+            .date-selector-page-overlay {
+                top: 0;
+                height: 16px;
             }
         }
 
@@ -353,12 +361,12 @@
             }
         }
 
-        // Pushed 
+        // Pushed
         &:active {
             color: $background-color;
 
             .date-selector-page {
-                &-hover {
+                &-overlay {
                     display: none;
                 }
 
@@ -376,7 +384,7 @@
             }
         }
 
-        // Arrow icon 
+        // Arrow icon
         &-label {
             position: absolute;
             left: 13px;
@@ -385,7 +393,7 @@
             pointer-events: none;
         }
 
-        // Arrow icon wrapper 
+        // Arrow icon wrapper
         .date-selector-page-label {
             top: 0px;
             right: 0px;
@@ -395,7 +403,7 @@
             text-align: center;
         }
 
-        // Bottom shadow 
+        // Bottom shadow
         &:before {
             content: '';
             position: absolute;
@@ -405,7 +413,7 @@
             box-shadow: 0 $border-thickness ($border-thickness * 2) $drop-shadow-dark-color;
         }
 
-        // Left scroll button 
+        // Left scroll button
         &-left {
             position: absolute;
             left: 10px;
@@ -433,7 +441,7 @@
             }
         }
 
-        // Right scroll button 
+        // Right scroll button
         &-right {
             position: relative;
             float: left;
@@ -454,7 +462,7 @@
         }
     }
 
-    // Expand/collapse caption button 
+    // Expand/collapse caption button
     &-caption {
         position: absolute;
         left: 10px;
@@ -514,16 +522,6 @@
                 bottom: 2px;
             }
         }
-    }
-}
-
-// Fix Safari moving child elements on opacity change.
-// http://stackoverflow.com/questions/12980153/image-moves-on-hover-chrome-opacity-issue
-@media screen and (-webkit-min-device-pixel-ratio:0) {
-    .date-selector-page,
-    .date-selector-scroll-left {
-        transform: translateZ(0px);
-        backface-visibility: hidden;
     }
 }
 
