--- a/src/Styles/_date.selector.scss
+++ b/src/Styles/_date.selector.scss
@@ -139,10 +139,6 @@
         &:hover {
             color: $foreground-color;
 
-            .date-selector-page-overlay .date-selector-page-pattern {
-                transform: translateY(0) !important;
-            }
-
             .date-selector-page-pattern {
                 transform: translateY(0);
             }
@@ -238,9 +234,9 @@
                 }
             }
 
-            // Overrides for children of page button 
+            // Overrides for children of page button
             .date-selector-page {
-                &-border, &-outline, &-focus-outline {
+                &-border, &-outline, &-focus-outline, &-overlay {
                     display: none;
                 }
             }
@@ -266,7 +262,6 @@
             top: 0;
         }
 
-        // TODO: remove this? Should be the default.
         &-pushed,
         &-overlay
         {
@@ -312,6 +307,7 @@
 
         &-pattern {
             transform: translateY(-16px);
+            transition: transform $animation-fast ease-in-out;
         }
 
         // Bottom shadow 
@@ -341,7 +337,7 @@
             color: $foreground-color;
 
             .date-selector-page-pattern {
-                transform: translateY(0);
+                transform: translateY(0) !important;
             }
         }
 
@@ -489,6 +485,11 @@
                 left: 0px;
                 top: 0px;
                 height: 100%;
+            }
+
+            // Background rectangle
+            &-background {
+                background: $background-color;
             }
 
             // Graph view 
