--- a/src/Styles/_shared.scss
+++ b/src/Styles/_shared.scss
@@ -27,6 +27,7 @@ $secondary-text-color: #848D95;
 $accent-color: #E3EBEC;
 $accent-light-color: #F6F6F6;
 $accent-highlight-color: mix($accent-light-color, white, 45%);
+$accent-shadow-color: #EBEBEB;
 $accent-hover-color: #D7DFE0;
 $accent-text-color: #127191;
 
